add modules for polyfils

--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "@parcel/transformer-sass": "^2.0.0-rc.0",
     "parcel": "^2.0.0-rc.0",
     "sass": "^1.80.4"
+  },
+  "dependencies": {
+    "core-js": "^3.38.1",
+    "regenerator-runtime": "^0.14.1"
   }
 }
