--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 forkify-architecture-recipe-loading.png
 forkify-flowchart-part-1.png
 forkify-flowchart-part-2.png
@@ -133,3 +135,4 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
