--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "core-js": "^3.38.1",
     "fractional": "^1.0.0",
+    "lmdb-store": "^1.6.14",
     "regenerator-runtime": "^0.14.1"
   }
 }
