update package.json to fix build error

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "recipy",
   "version": "1.0.0",
   "description": "Application to search for recipies",
-  "main": "scripts.js",
+  "default": "scripts.js",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --dist-dir ./dist"
@@ -31,7 +31,6 @@
   "dependencies": {
     "core-js": "^3.38.1",
     "fractional": "^1.0.0",
-    "lmdb-store": "^1.6.14",
     "regenerator-runtime": "^0.14.1"
   }
 }
