--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "core-js": "^3.38.1",
-    "fractional": "^1.0.0",
+    "mathjs": "^14.3.1",
     "regenerator-runtime": "^0.14.1"
   }
 }
