use fractional.js instead

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "core-js": "^3.38.1",
-    "mathjs": "^14.3.1",
+    "fractional.js": "^1.0.0",
     "regenerator-runtime": "^0.14.1"
   }
 }
